Fix issue on Windows with FF4/Minefield where there was spacing around the panel content.

--- a/extensions/firefox-share/src/chrome/skin/minefield-win/overlay.css
+++ b/extensions/firefox-share/src/chrome/skin/minefield-win/overlay.css
@@ -36,3 +36,7 @@
 .autocomplete-richlistitem[type="ffshare"] .ac-url-box {
     display: none !important;
 }
+
+.ffshare-panel .panel-inner-arrowcontent {
+    padding: 0;
+}
